# omap4m3

c/src/aclocal/: enable-smp.m4
c/src/lib/libbsp/arm/: ChangeLog  acinclude.m4
c/src/lib/libbsp/arm/omap4m3/: Makefile.am  README  configure.ac  preinstall.am
c/src/lib/libbsp/arm/omap4m3/console/: console-config.c
c/src/lib/libbsp/arm/omap4m3/include/: bsp.h  bspopts.h.in  irq.h  omap4m3.h
c/src/lib/libbsp/arm/omap4m3/make/custom/: omap4m3.cfg
c/src/lib/libbsp/arm/omap4m3/module/: Makefile  rproc.c
c/src/lib/libbsp/arm/omap4m3/smp/: getcpuid.c  smp_omap4m3.c
c/src/lib/libbsp/arm/omap4m3/startup/: bspstart.c  linkcmds.omap4m3
c/src/lib/libbsp/arm/shared/armv7m/irq/: armv7m-irq.c
c/src/lib/libbsp/arm/shared/start/: start.S
c/src/lib/libbsp/arm/shared/startup/: linkcmds.base
c/src/lib/libbsp/shared/: bootcard.c
cpukit/sapi/src/: exinit.c
cpukit/score/cpu/arm/rtems/score/: cpu.h
cpukit/score/src/: percpu.c  smp.c  smplock.c  threaddispatchdisablelevel.c
